include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

EXTRA_DIST = binaryAbstract.h \
     binaryDotGraph.h \
     binarySemantics.h \
     UGraphFunc.h \
     analysis/binaryAnalysis.h \
     analysis/UA.h \
     analysis/UABase.h \
     analysis/UACommon.h \
     analysis/UADataFlowAnal.h \
     analysis/UADependAnal.h \
     analysis/UAReadWriteAnal.h \
     analysis/UAStructAnal.h \
     analysis/dataflow/UADFLiveAnal.h \
     analysis/dataflow/UADFReachDefAnal.h \
     transform/binaryTransform.h \
     transform/regAllocLS.h \
     transform/schedulerList.h
