include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

TEST_PATH = $(top_srcdir)/projects/FaultToleranceFramework/test/Transform

TEST_CODES = $(TEST_PATH)/fttest1_C.C \
	$(TEST_PATH)/fttest1_Cxx.C \
	$(TEST_PATH)/fttest1_F.f \
	$(TEST_PATH)/fttest1_F.f90 \
	$(TEST_PATH)/fttest2_C.C \
	$(TEST_PATH)/fttest2_Cxx.C \
	$(TEST_PATH)/fttest3_C.C \
	$(TEST_PATH)/fttest4_C.C \
	$(TEST_PATH)/testcaseSmall.C \
	$(TEST_PATH)/testcase.C

EXTRA_DIST = $(TEST_CODES)
